k8s/bazarr/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingressroute
  namespace: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.home.coredev.uk`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
    - match: Host(`bazarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
          namespace: tinyauth
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-redirect
  namespace: bazarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: bazarr
          port: 6767
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: bazarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
